--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,6 @@
 body {
     background: #ebebeb;
+    font-family: Arial, Helvetica, sans-serif;
 }
 nav {
     margin-bottom: 20px;
@@ -33,4 +34,22 @@ nav .is-active {
 }
 .table tr:nth-child(even) {
     background-color: #d8d8d8;
-  }
+}
+button {
+    border: none;    
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 10px 20px;
+}
+.purple {
+    background: rgb(84, 72, 192);
+}
+.orange {
+    background: rgb(233, 170, 55);
+}
+.red {
+    background: rgb(199, 63, 63);
+}
