--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -1,131 +1,145 @@
 .modalBackground {
-    width: 100vw;
-    height: 100vh;
-    background-color: rgba(200, 200, 200, .7);
-    position: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(200, 200, 200, .7);
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+}
+
+.modalContainer {
+  width: 800px;
+  height: 200px;
+  border-radius: 12px;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  display: flex;
+  flex-direction: column;
+  padding: 25px;
+}
+
+.modalContainer .title {
+  display: inline-block;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.titleCloseBtn {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.titleCloseBtn button {
+  background-color: transparent;
+  border: none;
+  font-size: 25px;
+  cursor: pointer;
+}
+
+.modalContainer .body {
+  flex: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  text-align: center;
+}
+
+.modalContainer .footer {
+  flex: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modalContainer .footer button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 120px;
+  height: 30px;
+  margin: 10px;
+  border: none;
+  background-color: cornflowerblue;
+  color: white;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+table.devicesDetail {  
+  font-size: 14px;
+  border-collapse: collapse;
+  width: 100%;
+}
+table.devicesDetail th, 
+table.devicesDetail tr, 
+table.devicesDetail  td {  
+  border: 1px solid #ccc;
+}
+
+@keyframes FadeIn {
+  0% {
+    opacity: 0;
   }
-  
-  .modalContainer {
-    width: 500px;
-    height: 500px;
-    border-radius: 12px;
-    background-color: white;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    display: flex;
-    flex-direction: column;
-    padding: 25px;
+  100% {
+    opacity: 1;
   }
-  
-  .modalContainer .title {
-    display: inline-block;
-    text-align: center;
-    margin-top: 10px;
+}
+
+@-moz-keyframes FadeIn {
+  0% {
+    opacity: 0;
   }
-  
-  .titleCloseBtn {
-    display: flex;
-    justify-content: flex-end;
+  100% {
+    opacity: 1;
   }
-  
-  .titleCloseBtn button {
-    background-color: transparent;
-    border: none;
-    font-size: 25px;
-    cursor: pointer;
+}
+
+@-webkit-keyframes FadeIn {
+  0% {
+    opacity: 0;
   }
-  
-  .modalContainer .body {
-    flex: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.7rem;
-    text-align: center;
+  100% {
+    opacity: 1;
   }
-  
-  .modalContainer .footer {
-    flex: 20%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+}
+
+@-o-keyframes FadeIn {
+  0% {
+    opacity: 0;
   }
-  
-  .modalContainer .footer button {
-    width: 150px;
-    height: 45px;
-    margin: 10px;
-    border: none;
-    background-color: cornflowerblue;
-    color: white;
-    border-radius: 8px;
-    font-size: 20px;
-    cursor: pointer;
+  100% {
+    opacity: 1;
   }
-  
-  @keyframes FadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
+}
+
+@-ms-keyframes FadeIn {
+  0% {
+    opacity: 0;
   }
-  
-  @-moz-keyframes FadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
+  100% {
+    opacity: 1;
   }
-  
-  @-webkit-keyframes FadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  
-  @-o-keyframes FadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  
-  @-ms-keyframes FadeIn {
-    0% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 1;
-    }
-  }
-  .animated {
-     -webkit-animation-duration: 3s;
-     animation-duration: 3s;
-     -webkit-animation-fill-mode: both;
-     animation-fill-mode: both;
-     animation-name: FadeIn;
-     animation-duration: 3s;
-     transition-timing-function: linear;
-  }
-  
-  @-webkit-keyframes FadeIn {
-     0% {opacity: 0;}
-     100% {opacity: 1;}
-  }
-  
-  @keyframes FadeIn {
-     0% {opacity: 0;}
-     100% {opacity: 1;}
-  }
-  
+}
+.animated {
+   -webkit-animation-duration: 2s;
+   animation-duration: 2s;
+   -webkit-animation-fill-mode: both;
+   animation-fill-mode: both;
+   animation-name: FadeIn;
+   animation-duration: 2s;
+   transition-timing-function: linear;
+}
+
+@-webkit-keyframes FadeIn {
+   0% {opacity: 0;}
+   100% {opacity: 1;}
+}
+
+@keyframes FadeIn {
+   0% {opacity: 0;}
+   100% {opacity: 1;}
+}
