--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -1,7 +1,7 @@
 .modalBackground {
   width: 100vw;
   height: 100vh;
-  background-color: rgba(200, 200, 200, .7);
+  background-color: rgba(200, 200, 200, 0.7);
   position: fixed;
   display: flex;
   justify-content: center;
@@ -23,7 +23,6 @@
 .modalContainer .title {
   display: inline-block;
   text-align: center;
-  margin-top: 10px;
 }
 
 .titleCloseBtn {
@@ -32,10 +31,13 @@
 }
 
 .titleCloseBtn button {
+  background: #eee !important;
   background-color: transparent;
-  border: none;
+  border: 1px solid #bbb;
+  border-radius: 50%;
   font-size: 25px;
   cursor: pointer;
+  color: #000;
 }
 
 .modalContainer .body {
@@ -69,15 +71,19 @@
   cursor: pointer;
 }
 
-table.devicesDetail {  
+table.devicesDetail {
   font-size: 14px;
   border-collapse: collapse;
   width: 100%;
 }
-table.devicesDetail th, 
-table.devicesDetail tr, 
-table.devicesDetail  td {  
+table.devicesDetail th,
+table.devicesDetail tr,
+table.devicesDetail td {
   border: 1px solid #ccc;
+}
+table.devicesDetail input[type="text"] {
+  background: #eee;
+  width: 90%;
 }
 
 @keyframes FadeIn {
@@ -125,21 +131,29 @@ table.devicesDetail  td {
   }
 }
 .animated {
-   -webkit-animation-duration: 2s;
-   animation-duration: 2s;
-   -webkit-animation-fill-mode: both;
-   animation-fill-mode: both;
-   animation-name: FadeIn;
-   animation-duration: 2s;
-   transition-timing-function: linear;
+  -webkit-animation-duration: 2s;
+  animation-duration: 2s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  animation-name: FadeIn;
+  animation-duration: 2s;
+  transition-timing-function: linear;
 }
 
 @-webkit-keyframes FadeIn {
-   0% {opacity: 0;}
-   100% {opacity: 1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @keyframes FadeIn {
-   0% {opacity: 0;}
-   100% {opacity: 1;}
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
